--- a/src/components/RandomUser/RandomUser.module.scss
+++ b/src/components/RandomUser/RandomUser.module.scss
@@ -1,7 +1,7 @@
-$primary-color: #0070f3;
-$primary-hover: #005bb5;
+$primary-color: #000;
+$primary-hover: #444444;
 $card-bg: white;
-$shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+$shadow: 0 0 12px rgba(0, 0, 0, 0.5);
 $border-radius: 12px;
 
 
