--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,11 @@
+.header {
+  display: flex;
+  color:#fff;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .centerContainer {
   display: flex;
   justify-content: center;
